engine/tests/fixtures/invalid/http-cache/cap-update-task.tg
capability cap_update_task {
  name "Update Task"
  description "Updates a task"

  actors [actor_user]
  updates [entity_task]
  input [shape_input_update_task]
  output [shape_output_task_detail]

  status active
}
